# asdk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.py
app/: asdk_app.c  build.py  main.c
app/config/: app_config.cmake  asdk_config.cmake
app/inc/: asdk_app.h
app/linker_files/: cyt2b75_cm0plus.ld  cyt2b75_cm4.ld
asdk_core/: CMakeLists.txt  build.py  build.py.bak
asdk_core/cmake/: asdk_app_recipe.cmake  helper_functions.cmake
asdk_core/docs/: Doxyfile  conf.py  contributing.md  home.md  index.rst  introduction.md  new_platform.md  setup.md
asdk_core/docs/developer_guides/: adding_platform.md  index.rst  testing.md
asdk_core/docs/reference/apis/: i2c.rst  spi.rst  system.rst  uart.rst  watchdog.rst
asdk_core/docs/user_guides/peripherals/: can.md  gpio.md  timer.md
asdk_core/inc/: asdk_adc.h  asdk_can.h  asdk_clock.h  asdk_emulated_eeprom.h  asdk_error.h  asdk_flash.h  asdk_gpio.h  asdk_i2c.h  asdk_mcu_pins.h  asdk_peripherals.h  asdk_pinmux.h  asdk_pwm.h  asdk_spi.h  asdk_system.h  asdk_timer.h  asdk_uart.h  asdk_wdt.h
asdk_core/setup/: setup.py  setup.yaml
asdk_core/utils/ext_component_build_script/: build.sh
asdk_core/utils/file_templates/: dal_header.txt  dal_source.txt
catalyst/: CMakeLists.txt
catalyst/can_service/: CMakeLists.txt  asdk_can_service.c  asdk_can_service.h  can_service_q.h  linked_list.c  linked_list.h
examples/adc/adc_blocking/: adc_blocking.c
examples/adc/adc_non_blocking/: adc_non_blocking.c
examples/blank/: blank_project.c
examples/can/can_echoback/: can_echoback.c
examples/config/: app_config.cmake  asdk_config.cmake
examples/exp_0_blank_project/: blank_project.c
examples/exp_1_gpio/exp_1a_blink/: blinky.c
examples/exp_2_timer/exp_2b_compare/: timer_compare.c
examples/exp_3_adc/exp_3a_single_channel/: adc_blocking.c
examples/exp_3_adc/exp_3b_interrupt/: adc_non_blocking.c
examples/exp_4_can/exp_4a_send/: can_send.c
examples/gpio/button_interrupt/: button_interrupt.c
examples/gpio/button_polling/: button_polling.c
examples/timers/timer_capture/: timer_capture.c
examples/timers/timer_periodic/: timer_periodic.c
platform/: CMakeLists.txt  CommonFlags.cmake  platform.cmake  readme.md
platform/Infineon/cyt2b75/: CMakeLists.txt  FindFlags.cmake  apply_patch.bat  apply_patch.sh  readme.md  sdk_patch
platform/Infineon/cyt2b75/dal/inc/: asdk_platform.h  asdk_scb.h
platform/Infineon/cyt2b75/dal/src/: asdk_adc.c  asdk_can.c  asdk_clock.c  asdk_emulated_eeprom.c  asdk_flash.c  asdk_gpio.c  asdk_i2c.c  asdk_pinmux.c  asdk_pwm.c  asdk_scb.c  asdk_spi.c  asdk_system.c  asdk_timer.c  asdk_uart.c  asdk_wdt.c
platform/STM/stm32f4/: CMakeLists.txt  FindFlags.cmake  readme.md
platform/STM/stm32f4/dal/inc/: asdk_clock_values.h  asdk_pinmux.h  asdk_platform.h
platform/STM/stm32f4/dal/src/: asdk_clock.c  asdk_gpio.c  asdk_pinmux.c  asdk_system.c
platform/STM/stm32f4/sdk_config/src/: stm32f4xx_it.c
